Content Visibility: Duplicate click event prevented (quick clicks before API calls)

--- a/src/main/resources/css/mycollections.css
+++ b/src/main/resources/css/mycollections.css
@@ -4605,6 +4605,7 @@ right:1px;
 .shareMainContainer {
 	min-height: 500px;
 	margin-top: 10px;
+	padding-bottom: 100px;
 }
 
 .shareMainContainer .selectClassBlock{
